--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <! DOCTYPE html >
 <html >
 <head >
-SET08101 - Web Tech
+SET08101 - Web Tech </ title >
 </ head >
 <body >
 <h1 > Hello Web Tech </ h1 >
 <h2 > This is Cobie </ h2 >
+<h3 > This is my first website </ h3 >
 </ body >
 </ html >
