--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ SET08101 - Web Tech </ title >
 <body >
 <h1 > Hello Web Tech </ h1 >
 <h2 > This is Cobie </ h2 >
-<h3 > This is my first website </ h3 >
+<h3 > This is my first website1 </ h3 >
 </ body >
 </ html >
