--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <! DOCTYPE html >
 <html >
 <head >
-SET08101 - Web Tech </ title >
+  < meta charset ="UTF -8" />
+SET08101 - Web Tech - Cobie peebles - desert cusine </ title >
 </ head >
 <body >
 <h1 > Hello Web Tech </ h1 >
