--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <! DOCTYPE html >
 <html >
 <head >
-  < meta charset ="UTF -8" />
-SET08101 - Web Tech - Cobie peebles - desert cusine </ title >
+< meta charset ="UTF -8" />
+< title > SET08101 - Web Tech - Cobie peebles - desert cusine </ title >
 </ head >
 <body >
 <h1 > Hello Web Tech </ h1 >
