--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head >
 < meta charset ="UTF -8" />
-< title > SET08101 - Web Tech - Cobie peebles - desert cusine </ title >
+< title > SET08101 - Web Tech - 40511248 - Desert Cusine </ title >
 </ head >
 <body >
 <h1 > Hello Web Tech </ h1 >
