--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <! DOCTYPE html >
 <html >
 <head >
+  <link href=“style.css" rel="stylesheet" type=“text/css" media=“screen”>
+</head>
+<body>
+<h1>The Quick Brown Fox</h1>
+</body>
+</html>
+style.css
+body {background-color:black}
+h1 {color:red}
+p {color:blue}
 < meta charset ="UTF -8" />
 < title > SET08101 - Web Tech - 40511248 - Desert Cusine </ title >
 </ head >
